--- a/config.yaml
+++ b/config.yaml
@@ -18,8 +18,9 @@ requirements:
   - accelerate
 resources:
   cpu: "3"
-  memory: 12Gi
+  memory: 50Gi
   use_gpu: true
+  accelerator: "A100:1"
 secrets: {}
 system_packages: []
 spec_version: 2.0
