--- a/config.yaml
+++ b/config.yaml
@@ -23,6 +23,6 @@ resources:
   use_gpu: true
   accelerator: "A100:1"
 secrets:
-  hf_api_key: "ENTER HF API KEY HERE"
+  hf_api_key: null
 system_packages: []
 spec_version: 2.0
